commitando função de tela de vitória e algumas correções de estilização na animação

--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
         <h1>Bem-vindo ao Lig-4</h1>
     </header>
     <main>
-        <div id="game-container">
-
+        <div id="game-flex">
+            <div id="game-container">
+            </div>
+            
         </div>
     </main>
     <script src="script.js"></script>
