fix: finalizacao da branch de emergencia

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </main>
     <footer id="footer">
         <div id="footerDiscRed"></div>
-        <div class="arrowRight"></div>
+        <div id="arrowDiv" class="arrowRight"></div>
         <div id="footerDiscBlack"></div>
     </footer>
     <script src="script.js"></script>
